--- a/charts/nginx/templates/deployment.yaml
+++ b/charts/nginx/templates/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-{{ .Release.Name }}
+  labels:
+    cluster: {{ .Values.cluster }}
 spec:
   replicas: 1
   selector:
