--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -10,7 +10,7 @@ releases:
     values:
       - cluster: {{ .Environment.Name }}
     secrets:
-      - secrets+gpg-import:///helm-secrets-private-keys/key.asc?secrets/nginx.yaml
+      - secrets/nginx.yaml
 
   - name: nginx-green
     namespace: nginx2
@@ -20,4 +20,4 @@ releases:
     values:
       - cluster: {{ .Environment.Name }}
     secrets:
-      - secrets+gpg-import:///helm-secrets-private-keys/key.asc?secrets/nginx.yaml
+      - secrets/nginx.yaml
